--- a/index.html
+++ b/index.html
@@ -149,8 +149,14 @@
                 </p>
             </div>
 
-<div class="relative w-96 h-96 md:w-[400px] md:h-[150px] my-2">
-    <dotlottie-wc src="https://lottie.host/ef534813-19b0-4679-903d-4790b0d4ee40/JkiBf0lw92.lottie" autoplay loop class="w-full h-full"></dotlottie-wc>
+<div class="relative w-full max-w-[350px] h-48 md:max-w-[500px] md:h-[300px] mx-auto my-6">
+    <dotlottie-wc 
+        src="https://lottie.host/ef534813-19b0-4679-903d-4790b0d4ee40/JkiBf0lw92.lottie" 
+        autoplay 
+        loop 
+        class="w-full h-full"
+        mode="normal"
+    ></dotlottie-wc>
 </div>
 
             <div class="grid grid-cols-1 md:grid-cols-2 gap-4 w-full max-w-lg mt-4">
