--- a/index.html
+++ b/index.html
@@ -117,8 +117,7 @@
 
   </style>
 </head>
-<body class="bg-gradient-to-br from-orange-500 via-red-500 to-rose-600 min-h-screen relative selection:bg-orange-200 selection:text-orange-900 flex flex-col items-center justify-center p-4">
-
+<body class="bg-gradient-to-br from-orange-500 via-red-500 to-rose-600 min-h-dvh relative selection:bg-orange-200 selection:text-orange-900 flex flex-col items-center justify-center p-4">
   <div class="bg-icon-container">
       <i class="fi fi-sr-graduation-cap floating-icon text-9xl" style="left: 5%; animation-duration: 20s;"></i>
       <i class="fi fi-sr-coins floating-icon text-8xl" style="left: 20%; animation-duration: 25s; animation-delay: 5s;"></i>
@@ -143,20 +142,14 @@
                     CRA JOB FAIR &<br/>
                     <span class="text-transparent bg-clip-text bg-gradient-to-r from-orange-500 to-red-600">EDUCATION 2026</span>
                 </h1>
-                <p class="text-gray-500 text-lg mt-4 max-w-lg mx-auto">
-                    นิทรรศการแนะแนวอาชีพและการศึกษาต่อราชวิทยาลัยจุฬาภรณ์<br>
-                    ลงทะเบียนร่วมงาน รับสิทธิ์คูปองอาหารฟรี! จำนวนจำกัด!
-                </p>
+               <p class="text-gray-500 text-sm md:text-lg mt-4 max-w-lg mx-auto leading-relaxed">
+    นิทรรศการแนะแนวอาชีพและการศึกษาต่อราชวิทยาลัยจุฬาภรณ์<br>
+    ลงทะเบียนร่วมงาน รับสิทธิ์คูปองอาหารฟรี! จำนวนจำกัด!
+</p>
             </div>
 
-<div class="relative w-full max-w-[350px] h-48 md:max-w-[500px] md:h-[300px] mx-auto my-6">
-    <dotlottie-wc 
-        src="https://lottie.host/ef534813-19b0-4679-903d-4790b0d4ee40/JkiBf0lw92.lottie" 
-        autoplay 
-        loop 
-        class="w-full h-full"
-        mode="normal"
-    ></dotlottie-wc>
+<div class="relative w-full max-w-[350px] h-48 md:max-w-[500px] md:h-[300px] mx-auto my-2">
+    <dotlottie-wc src="https://lottie.host/ef534813-19b0-4679-903d-4790b0d4ee40/JkiBf0lw92.lottie" autoplay loop class="w-full h-full"></dotlottie-wc>
 </div>
 
             <div class="grid grid-cols-1 md:grid-cols-2 gap-4 w-full max-w-lg mt-4">
