--- a/index.html
+++ b/index.html
@@ -117,7 +117,8 @@
 
   </style>
 </head>
-<body class="bg-gradient-to-br from-orange-500 via-red-500 to-rose-600 min-h-dvh relative selection:bg-orange-200 selection:text-orange-900 flex flex-col items-center justify-center p-4">
+<body class="min-h-dvh relative selection:bg-orange-200 selection:text-orange-900 flex flex-col items-center justify-center p-4">
+  <div class="fixed inset-0 w-full h-full bg-gradient-to-br from-orange-500 via-red-500 to-rose-600 -z-50"></div>
   <div class="bg-icon-container">
       <i class="fi fi-sr-graduation-cap floating-icon text-9xl" style="left: 5%; animation-duration: 20s;"></i>
       <i class="fi fi-sr-coins floating-icon text-8xl" style="left: 20%; animation-duration: 25s; animation-delay: 5s;"></i>
