--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                                     <div class="bg-gray-50 p-3 rounded-xl  text-orange-500 shrink-0 flex items-center justify-center">
                                         <i class="fi fi-sr-hospital text-2xl flex items-center justify-center leading-none"></i>
                                     </div>
-                                    <div><span class="font-bold text-gray-800 block">12 กุมภาพันธ์ 2569</span><span class="text-xs text-gray-500">วันแห่งสายการแพทย์/โรงพยาบาล/ธุรกิจบริการสุขภาพ(รับคูปอง 3 ใบ)</span></div>
+                                    <div><span class="font-bold text-gray-800 block">12 กุมภาพันธ์ 2569</span><span class="text-xs text-gray-500">วันแห่งสายการแพทย์/โรงพยาบาล/ธุรกิจบริการสุขภาพ</span></div>
                                     <div class="absolute top-4 right-4 text-orange-500 opacity-0 peer-checked:opacity-100 transition-opacity"><i class="fi fi-sr-check-circle"></i></div>
                                 </div>
                             </label>
@@ -384,7 +384,7 @@
                                     <div class="bg-gray-50 p-3 rounded-xl  text-orange-500 shrink-0 flex items-center justify-center">
                                         <i class="fi fi-sr-microchip text-2xl flex items-center justify-center leading-none"></i>
                                     </div>
-                                    <div><span class="font-bold text-gray-800 block">13 กุมภาพันธ์ 2569</span><span class="text-xs text-gray-500">วันแห่งสาย Tech/Data/ นวัตกรรมอาหารและยา/เครื่องมือการแพทย์(รับคูปอง 3 ใบ)</span></div>
+                                    <div><span class="font-bold text-gray-800 block">13 กุมภาพันธ์ 2569</span><span class="text-xs text-gray-500">วันแห่งสาย Tech/Data/ นวัตกรรมอาหารและยา/เครื่องมือการแพทย์</span></div>
                                     <div class="absolute top-4 right-4 text-orange-500 opacity-0 peer-checked:opacity-100 transition-opacity"><i class="fi fi-sr-check-circle"></i></div>
                                 </div>
                             </label>
@@ -395,7 +395,7 @@
                                     <div class="bg-gray-50 p-3 rounded-xl  text-orange-500 shrink-0 flex items-center justify-center">
                                         <i class="fi fi-sr-calendar-star text-2xl flex items-center justify-center leading-none"></i>
                                     </div>
-                                    <div><span class="font-bold text-gray-800 block">เข้าร่วมทั้ง 2 วัน (12-13 กุมภาพันธ์ 2569)</span><span class="text-xs text-gray-500">รับคูปอง 6 ใบ</span></div>
+                                    <div><span class="font-bold text-gray-800 block">เข้าร่วมทั้ง 2 วัน (12-13 กุมภาพันธ์ 2569)</span><span class="text-xs text-gray-500">จัดเต็มวันแห่งสายการแพทย์และเทคโนโลยี</span></div>
                                     <div class="absolute top-4 right-4 text-orange-500 opacity-0 peer-checked:opacity-100 transition-opacity"><i class="fi fi-sr-check-circle"></i></div>
                                 </div>
                             </label>
