--- a/login.html
+++ b/login.html
@@ -209,34 +209,32 @@
               </div>
 
               <div id="sponsor-manual-section" class="hidden min-h-[18rem] flex flex-col items-center justify-center">
-                  <div class="w-full">
-                      <label class="block text-base font-bold text-gray-700 mb-4 text-center">กรอกรหัสคูปอง</label>
+                  <div class="w-full px-2"> <label class="block text-base font-bold text-gray-700 mb-4 text-center">กรอกรหัสคูปอง</label>
                       
-                      <div class="flex items-center justify-center gap-3 mb-8">
+                      <div class="flex items-center justify-center gap-1 mb-8">
                           <div class="flex items-center">
-                              <span class="text-orange-500 font-black text-3xl mr-2">CV</span>
-                              <span class="text-gray-300 font-bold text-2xl mx-1">-</span>
-                              <input type="tel" id="sp-input-id" class="w-32 py-3 rounded-xl border-2 border-gray-200 text-center font-bold text-3xl focus:border-orange-500 outline-none tracking-[0.2em]" placeholder="0000" maxlength="4" oninput="this.value=this.value.replace(/[^0-9]/g,'')">
+                              <span class="text-orange-500 font-black text-xl mr-1">CV</span>
+                              <span class="text-gray-300 font-bold text-xl mx-0.5">-</span>
+                              <input type="tel" id="sp-input-id" class="w-24 py-2 rounded-xl border-2 border-gray-200 text-center font-bold text-xl focus:border-orange-500 outline-none tracking-widest" placeholder="0000" maxlength="4" oninput="this.value=this.value.replace(/[^0-9]/g,'')">
                           </div>
                           
-                          <span class="text-gray-300 font-bold text-2xl">-</span>
+                          <span class="text-gray-300 font-bold text-xl">-</span>
 
-                          <select id="sp-input-date" class="bg-gray-50 border-2 border-gray-200 text-gray-800 text-2xl font-bold rounded-xl py-3 px-3 focus:border-orange-500 outline-none appearance-none text-center w-20">
+                          <select id="sp-input-date" class="bg-gray-50 border-2 border-gray-200 text-gray-800 text-xl font-bold rounded-xl py-2 px-1 focus:border-orange-500 outline-none appearance-none text-center w-16">
                               <option value="12">12</option>
                               <option value="13">13</option>
                           </select>
 
-                          <span class="text-gray-300 font-bold text-2xl">-</span>
+                          <span class="text-gray-300 font-bold text-xl">-</span>
 
-                          <input type="tel" id="sp-input-index" class="w-16 py-3 rounded-xl border-2 border-gray-200 text-center font-bold text-3xl focus:border-orange-500 outline-none" placeholder="1" maxlength="1" oninput="this.value=this.value.replace(/[^0-9]/g,'')">
+                          <input type="tel" id="sp-input-index" class="w-12 py-2 rounded-xl border-2 border-gray-200 text-center font-bold text-xl focus:border-orange-500 outline-none" placeholder="1" maxlength="1" oninput="this.value=this.value.replace(/[^0-9]/g,'')">
                       </div>
 
-                      <button onclick="submitSponsorManual()" class="w-full btn-gradient py-4 rounded-2xl font-bold shadow-lg text-white flex items-center justify-center gap-2 hover:scale-[1.02] transition-transform text-lg">
+                      <button onclick="submitSponsorManual()" class="w-full btn-gradient py-3 rounded-2xl font-bold shadow-lg text-white flex items-center justify-center gap-2 hover:scale-[1.02] transition-transform text-lg">
                           <i class="fi fi-sr-ticket-alt text-xl"></i> ตัดคูปอง
                       </button>
                   </div>
               </div>
-
               <div class="mt-8 border-t border-gray-100 pt-6">
                   <h3 class="text-base font-bold text-gray-700 mb-4 flex items-center">
                       <i class="fi fi-sr-time-past text-orange-500 mr-2"></i> รายการล่าสุด
