--- a/index.html
+++ b/index.html
@@ -632,8 +632,12 @@
                 </div>
 
                 <div class="mt-8">
-                     <button onclick="goBackToHome()" class="text-orange-600 hover:text-orange-700 font-medium transition active:scale-95">กลับสู่หน้าหลัก (ลงทะเบียนใหม่)</button>
-                </div>
+    <button onclick="goBackToHome()" class="group relative inline-flex items-center justify-center gap-2 px-8 py-3 bg-white border-2 border-orange-100 rounded-full shadow-sm text-orange-600 font-bold transition-all duration-300 hover:bg-orange-50 hover:border-orange-300 hover:shadow-lg hover:-translate-y-1 active:scale-95">
+        <i class="fi fi-sr-add text-lg transition-transform duration-500 group-hover:rotate-180"></i>
+        
+        <span>กลับสู่หน้าหลัก (ลงทะเบียนใหม่)</span>
+    </button>
+</div>
             </div>
 
          </div>
