--- a/index.html
+++ b/index.html
@@ -351,6 +351,7 @@
                             <select name="department" class="w-full input-glass rounded-xl p-3">
                                 <option value="">-- เลือกสังกัด --</option>
                                 <option value="สำนักงานราชวิทยาลัยจุฬาภรณ์">สำนักงานราชวิทยาลัยจุฬาภรณ์</option>
+                              <option value="วิทยาลัยวิทยาศาสตร์การแพทย์เจ้าฟ้าจุฬาภรณ์">วิทยาลัยวิทยาศาสตร์การแพทย์เจ้าฟ้าจุฬาภรณ์</option>
                                 <option value="โรงพยาบาลจุฬาภรณ์">โรงพยาบาลจุฬาภรณ์</option>
                                 <option value="คณะแพทยศาสตรศรีสวางควัฒน">คณะแพทยศาสตรศรีสวางควัฒน</option>
                                 <option value="คณะพยาบาลอัครราชกุมารี">คณะพยาบาลอัครราชกุมารี</option>
