--- a/login.html
+++ b/login.html
@@ -449,7 +449,7 @@ function switchView(role) {
                             const has12 = newCoupons.some(c => c.code.includes('-12-') && !oldCoupons.find(o => o.code === c.code));
                             const has13 = newCoupons.some(c => c.code.includes('-13-') && !oldCoupons.find(o => o.code === c.code));
                             
-                            let msg = "คุณได้รับคูปองอาหาร";
+                            let msg = "คุณได้รับคูปองของว่างและเครื่องดื่ม";
                             if (has12 && has13) msg = "เช็คอินครบทั้ง 2 วันเรียบร้อย!";
                             else if (has12) msg = "เช็คอินวันที่ 12 ก.พ. สำเร็จ!";
                             else if (has13) msg = "เช็คอินวันที่ 13 ก.พ. สำเร็จ!";
@@ -707,7 +707,7 @@ function switchView(role) {
                                 <div class="text-[10px] font-bold uppercase opacity-70 tracking-wider" style="color:${txtColor}">
                                     <i class="fi fi-sr-calendar-day mr-1"></i>${dateCode} กุมภาพันธ์
                                 </div>
-                                <div class="text-xl font-bold" style="color:${txtColor}">คูปองอาหาร</div>
+                                <div class="text-xl font-bold" style="color:${txtColor}">คูปองอาหารของว่างและเครื่องดื่ม</div>
                                 <div class="text-xs opacity-80" style="color:${txtColor}">รหัส: ${c.code}</div>
                             </div>
                         </div>
@@ -738,7 +738,7 @@ function showCouponQR(code) {
                         </svg>
                     </div>
 
-                    <h3 class="text-2xl font-bold text-gray-800 mb-1">คูปองอาหาร</h3>
+                    <h3 class="text-2xl font-bold text-gray-800 mb-1">คูปองอาหารของว่างและเครื่องดื่ม</h3>
                     <p class="text-xs text-gray-400 mb-6">แสดง QR Code นี้ให้ร้านค้าสแกน</p>
 
                     <div class="bg-white p-3 rounded-2xl border-2 border-dashed border-orange-200 shadow-sm mb-6 relative group cursor-pointer transition-transform hover:scale-105">
