--- a/login.html
+++ b/login.html
@@ -707,7 +707,7 @@ function switchView(role) {
                                 <div class="text-[10px] font-bold uppercase opacity-70 tracking-wider" style="color:${txtColor}">
                                     <i class="fi fi-sr-calendar-day mr-1"></i>${dateCode} กุมภาพันธ์
                                 </div>
-                                <div class="text-xl font-bold" style="color:${txtColor}">คูปองอาหารของว่างและเครื่องดื่ม</div>
+                                <div class="text-xl font-bold" style="color:${txtColor}">คูปอง</br>ของว่างและเครื่องดื่ม</div>
                                 <div class="text-xs opacity-80" style="color:${txtColor}">รหัส: ${c.code}</div>
                             </div>
                         </div>
@@ -738,7 +738,7 @@ function showCouponQR(code) {
                         </svg>
                     </div>
 
-                    <h3 class="text-2xl font-bold text-gray-800 mb-1">คูปองอาหารของว่างและเครื่องดื่ม</h3>
+                    <h3 class="text-2xl font-bold text-gray-800 mb-1">คูปอง</br>ของว่างและเครื่องดื่ม</h3>
                     <p class="text-xs text-gray-400 mb-6">แสดง QR Code นี้ให้ร้านค้าสแกน</p>
 
                     <div class="bg-white p-3 rounded-2xl border-2 border-dashed border-orange-200 shadow-sm mb-6 relative group cursor-pointer transition-transform hover:scale-105">
